--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 
 # Avoid committing pubspec.lock for library packages; see
 # https://dart.dev/guides/libraries/private-files#pubspeclock.
-pubspec.lock
+# pubspec.lock
 
 .idea
