--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,28 @@
 name: flutter_app_renamer
-description: A command-line tool that makes it easy to change your Flutter AppName and BundleID.
-version: 0.1.1
+description: A command-line tool that makes it easy to change your Flutter AppName and BundleID on all platforms.
+version: 1.0.0
 repository: https://github.com/MokuluaDev/flutter_app_renamer
 
 environment:
   sdk: ^3.1.0
 
 dependencies:
-  rename: any
-  yaml: any
+  rename: ^2.1.1
+  yaml: ^3.1.2
 
 dev_dependencies:
   lints: ^2.1.1
 
+executables:
+  flutter_app_renamer:
+
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
+
+funding:
+  - https://coindrop.to/mokulua
