--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_app_renamer
 description: A command-line tool that makes it easy to change your Flutter AppName and BundleID on all platforms.
-version: 1.0.0
+version: 1.0.1
 repository: https://github.com/MokuluaDev/flutter_app_renamer
 
 environment:
-  sdk: ^3.1.0
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   rename: ^2.1.1
